# FinSolve-RAG-Assistant

./: .env.example  .gitignore  .vercelignore  DEPLOYMENT.md  README.md  VERCEL_DEPLOYMENT.md  deploy_ec2.sh  pyproject.toml  rag.ipynb  requirements.txt  run.sh  vercel.json
.github/prompts/: main_app.prompt.md
api/: __init__.py  index.py
app/: __init__.py  main.py
app/schemas/: __init__.py
app/services/: auth.py  chat.py  documents.py  users.py
app/utils/: hr_helper.py  query_processor.py  rag_engine.py
database/chat_history/: user_1_conversations.json  user_2_conversations.json
database/vector_store/: chroma.sqlite3
resources/database/: role_permissions.json  users.json
resources/database/chat_history/: user_1_conversations.json
resources/database/vector_store/: chroma.sqlite3
resources/static/: index.html
static/: index.html
